# Famaly-Budget

./: .gitignore  README.md  Taskfile.yml  manage.py  pyproject.toml  pytest.ini
budget/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: transactions_upload.html  upload_file.html
transactions/: admin.py  forms.py  models.py  parser.py  serializers.py  urls.py  views.py
transactions/fixtures/: test_data.json
transactions/tests/: test_admin.py  test_api.py  test_models.py  test_parser.py
